--- a/_vars.scss
+++ b/_vars.scss
@@ -1,6 +1,6 @@
 $black: black;
 $white: white;
-$saccents: #FAC836;
+$accents: #FAC836;
 $bg: #FCF4EA;
 $text: #444645;
 $bodyFont: "Montserrat", sans-serif;
